<resources>
    <string name="app_name">LOSTANDFOUNDAPP</string>

    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>

    <string name="ilost_found"><![CDATA[iLost&Found]]></string>
    <!--        <string name="app_name">iLost&Found</string>-->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="lost_items">Lost Items</string>
    <string name="found_items">Found Items</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">User Name</string>
    <string name="user_example_com">user@example.com</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user">User Name</string>
    <string name="user_examplecom">user@example.com</string>
    <string name="add_lost_item">Add Lost Item</string>
    <string name="lost_item">Add Lost Item</string>
    <string name="item_name">Item Name</string>
    <string name="lost_location">Lost Location</string>
    <string name="description">Description</string>
    <string name="report_lost_item">Report Lost Item</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="image">Image</string>
    <string name="item_image">Item Image</string>
    <string name="main_action">Main Action</string>
    <string name="chat">Chat</string>
    <string name="my_reports">My Reports</string>
    <string name="welcome_to_home">Welcome to Home!</string>
    <string name="item_type">Item Type</string>
    <string name="item_nam">Item Name</string>
    <string name="date">Date</string>
    <string name="personal_belongings">Personal Belongings</string>
    <string name="settingsa">Settings</string>
    <string name="terms_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="change_password">Change Password</string>
    <string name="about_this_app">About This App</string>
    <string-array name="filter_options">
        <item>All</item>
        <item>Lost</item>
        <item>Found</item>
    </string-array>


</resources>