<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <!-- Base layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="@drawable/menu"
            app:title="@string/ilost_found"
            app:titleTextColor="@android:color/white" />

        <!-- Scrollable Fragment Area -->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_area"
            android:layout_below="@id/toolbar"
            android:layout_above="@+id/fab_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:padding="0dp">

            <FrameLayout
                android:id="@+id/content_frame"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.core.widget.NestedScrollView>

        <!-- Floating Action Buttons container -->
        <LinearLayout
            android:id="@+id/fab_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/group_border"
            android:padding="5dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/history"
                android:tooltipText="My History"
                android:contentDescription="@string/my_reports"
                app:backgroundTint="@color/design_default_color_primary"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_lost_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/plus"
                android:contentDescription="@string/main_action"
                app:backgroundTint="@color/design_default_color_primary"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/chat"
                android:contentDescription="@string/chat"
                app:backgroundTint="@color/design_default_color_primary"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/maps"
                android:contentDescription="Map"
                app:backgroundTint="@color/design_default_color_primary"
                app:tint="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
